[package]
name = "rusty-exif"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kamadak-exif = "0.5.4"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.59"
clap = {version = "4.0.22", features = ["derive"]}
sscanf = "0.4.0"
