[package]
name = "rsexif"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
scanf = "1.2.1"
anyhow = "1.0"
rexiv2 = "0.10"


[lib]
name = "rsexif"
path = "src/lib.rs"

[[bin]]
name = "rsexif"
path = "src/main.rs"
