[package]
name = "rusty-exif"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7"
kamadak-exif = "0.5.5"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
clap = {version = "4.1.11", features = ["derive"]}
sscanf = "0.4.0"
chrono = "0.4.24"
